kubernetes/workloads/apps/media-server/sonarr/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media-server
  labels:
    app.kubernetes.io/name: sonarr
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext:
        runAsUser: 108989
        runAsGroup: 109030
        fsGroup: 109030
        seccompProfile:
          type: RuntimeDefault
        seLinuxOptions:
          level: "s0:c123,c456"
      containers:
        - name: sonarr
          image: ghcr.io/home-operations/sonarr:4.0.19.2997@sha256:01db3e6a923f6e0f3a217baa94b4660cf2f9b45d4166b2fc8c20c67c5221cb78
          imagePullPolicy: IfNotPresent
          ports:
            - name: sonarr-http
              containerPort: &port 8989
              protocol: TCP
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 250m
              memory: 250Mi
            limits:
              memory: 4Gi
          livenessProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 0
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /ping
              port: *port
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          startupProbe:
            tcpSocket:
              port: *port
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 10
          securityContext:
            runAsNonRoot: true
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ['ALL']
        - name: exporter
          image: ghcr.io/onedr0p/exportarr:v2.3.0
          imagePullPolicy: IfNotPresent
          args:
            - sonarr
          ports:
            - name: monitoring
              containerPort: 9707
          livenessProbe:
            httpGet:
              path: /healthz
              port: monitoring
            failureThreshold: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: monitoring
            failureThreshold: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            runAsNonRoot: true
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ['ALL']
      volumes:
        - name: sonarr-config
          emptyDir:
            sizeLimit: 128Mi
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: tmp
          emptyDir: {}
