kubernetes/workloads/apps/media-server/sonarr/manifests/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media-server
  labels:
    app.kubernetes.io/name: sonarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sonarr
  ports:
    - name: sonarr-http
      port: 8989
      protocol: TCP
      targetPort: sonarr-http
    - name: monitoring
      port: 9707
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: media-server
  labels:
    app.kubernetes.io/name: sonarr
  annotations:
    external-dns.alpha.kubernetes.io/hostname: sonarr.${DOMAIN}
spec:
  parentRefs:
    - name: private
      namespace: networking
      sectionName: https
  hostnames:
    - sonarr.${DOMAIN}
  rules:
    - backendRefs:
        - name: sonarr
          port: 8989
